--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,12 @@ body {
     width: 85%;
     max-width: 90vw;
 }
+
+#BusFlow {
+    display: flex;
+    margin-bottom: 2em;
+}
+
 h1 {
     color: #333;
     margin-bottom: 1rem;
