--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,17 @@ body {
     margin-bottom: 2em;
 }
 
+#BusFlowLogo {
+    background-color: #000;
+    border-radius: 0.8em;
+    margin-right: 1em;
+}
+
+#smallBusFlowLogo {
+    background-color: #000;
+    border-radius: 0.3em;
+}
+
 h1 {
     color: #333;
     margin-bottom: 1rem;
