--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ li {
     margin-bottom: 0.5em;
     padding: 0.2em;
 }
-#whats-new, #help {
+#whats-new, #help, #comments {
     margin-bottom: 3em;
     border: #000 solid 0.1em;
     padding: 1em;
@@ -86,7 +86,7 @@ li {
 
 /* 联系表单容器 */
 #contact-section {
-    margin-bottom: 0em;
+    margin-bottom: 3em;
     border: #000 solid 0.1em;
     padding: 1em;
     border-radius: 0.5em;
