--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ li {
 
 #whats-new img{
     padding: 0.2em 0.2em;
+    margin-top: 1em;
     
 }
 
@@ -224,3 +225,9 @@ li {
     }
     
 }
+.update-date-p {
+    font-size: 0.8em;
+    color: #666;
+    margin-top: 0.5em;
+}
+
